--- a/helm/Insurance-policy/templates/deployment.yaml
+++ b/helm/Insurance-policy/templates/deployment.yaml
@@ -1,44 +1,42 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: {{ include "Insurance-policy.fullname" . }}
+  name: insurance-policy-v1.0
   labels:
-    {{- include "Insurance-policy.labels" . | nindent 4 }}
+    app: insurance-policy
+    version: "1.0"
+    environment: development
+  namespace: {{ .Values.namespace }}
 spec:
   replicas: {{ .Values.replicaCount }}
   selector:
     matchLabels:
-      {{- include "Insurance-policy.selectorLabels" . | nindent 6 }}
+      app: insurance-policy
+      version: "1.0"
+      environment: development
   template:
     metadata:
       labels:
-        {{- include "Insurance-policy.selectorLabels" . | nindent 8 }}
+        app: insurance-policy
+        version: "1.0"
+        environment: development
     spec:
-    {{- with .Values.imagePullSecrets }}
-      imagePullSecrets:
-        {{- toYaml . | nindent 8 }}
-    {{- end }}
-      serviceAccountName: {{ include "Insurance-policy.serviceAccountName" . }}
-      securityContext:
-        {{- toYaml .Values.podSecurityContext | nindent 8 }}
       containers:
-        - name: {{ .Chart.Name }}
-          securityContext:
-            {{- toYaml .Values.securityContext | nindent 12 }}
-          image: "{{ .Values.image.repository }}:{{ .Chart.AppVersion }}"
+        - name: "store-service-cmd-container"
+          image: {{ .Values.image.repository }}
           imagePullPolicy: {{ .Values.image.pullPolicy }}
+          env:
+            - name: MYSQL_HOST
+              valueFrom:
+                configMapKeyRef:
+                  name: mysql-config
+                  key: MYSQL_HOST
+            - name: spring.profiles.active
+              value: "development" 
           ports:
             - name: http
-              containerPort: 80
+              containerPort: 8080
               protocol: TCP
-          livenessProbe:
-            httpGet:
-              path: /
-              port: http
-          readinessProbe:
-            httpGet:
-              path: /
-              port: http
           resources:
             {{- toYaml .Values.resources | nindent 12 }}
       {{- with .Values.nodeSelector }}
