--- a/helm/Insurance-policy/templates/service.yaml
+++ b/helm/Insurance-policy/templates/service.yaml
@@ -1,15 +1,20 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: {{ include "Insurance-policy.fullname" . }}
+  name: insurance-policy
+  namespace: insurance-development
   labels:
-    {{- include "Insurance-policy.labels" . | nindent 4 }}
+    app: insurance-policy
+    version: "1.0"
+    environment: development
 spec:
   type: {{ .Values.service.type }}
   ports:
     - port: {{ .Values.service.port }}
-      targetPort: http
+      targetPort: 8080
       protocol: TCP
       name: http
   selector:
-    {{- include "Insurance-policy.selectorLabels" . | nindent 4 }}
+    app: insurance-policy
+    version: "1.0"
+    environment: development
