--- a/helm/namespace-chart/templates/namespace-dev.yml
+++ b/helm/namespace-chart/templates/namespace-dev.yml
@@ -1,6 +1,6 @@
 apiVersion: v1
 kind: Namespace
 metadata:
-  name: "neargrocery-development"
+  name: "insurance-development"
   labels:
-    name: "neargrocery-development"
+    name: "insurance-development"
